--- a/templates/base.html
+++ b/templates/base.html
@@ -107,9 +107,9 @@
                    <div><a class="col" href="/feedback/">Give us feedback</a></div>
                 </div>
                 <div class="col-md-4 list-group">
-                    <div><a class="col" href="https://github.com/sakkhat"><i class="fa fa-github"> Github</i></a></div>
-                    <div><a class="col" href="https://www.linkedin.com/company/sakkhat/"><i class="fa fa-linkedin-square"> Linkedin</i></a></div>
-                   <div><a class="col" href="#"><i class="fa fa-facebook-square"> Facebook</i></a></div>
+                    <div><a class="col" href="https://github.com/sakkhat/"><i class="fa fa-github"> Github</i></a></div>
+                    <div><a class="col" href="https://linkedin.com/company/sakkhat/"><i class="fa fa-linkedin-square"> Linkedin</i></a></div>
+                   <div><a class="col" href="https://facebook.com/sakkhat.inc/"><i class="fa fa-facebook-square"> Facebook</i></a></div>
                 </div>
                 <div class="col-md-4 list-group">
                    <div><a class="col" href="/terms/">Terms</a></div>
