--- a/templates/account/manage/update.html
+++ b/templates/account/manage/update.html
@@ -17,6 +17,20 @@
             <div class="col-md-8">
                 <div class="list-group">
                     <h5 class="list-group-item list-group-item-dark">About</h5>
+                    {% if form.errors %}
+                        {% for field in form %}
+                            {% for error in field.errors %}
+                                <div class="alert alert-danger">
+                                    <strong>{{ error|escape }}</strong>
+                                </div>
+                            {% endfor %}
+                        {% endfor %}
+                        {% for error in form.non_field_errors %}
+                            <div class="alert alert-danger">
+                                <strong>{{ error|escape }}</strong>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
                     <form method="POST">
                         {% csrf_token %}
                         <div class="list-group-item">
@@ -31,6 +45,10 @@
                         <div class="list-group-item">
                             {{ form.gender.label}}
                             {{ form.gender }}
+                        </div>
+                        <div class="list-group-item">
+                            {{ form.password.label}}
+                            {{ form.password }}
                         </div>
                         <button class="btn btn-primary btn-block" type="submit">Update</button>
                     </form>
