--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,8 @@
 
                 <div class="collapse navbar-collapse" id="navb">
                     <form class="form-inline my-2 my-lg-0 mr-auto">
-                        <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                        {% csrf_token %}
+                        <input class="form-control mr-sm-2" type="text" name="query"  placeholder="ex. T-Shirt">
                         <button class="btn btn-secondary my-2 my-sm-0" type="button">Search</button>
                     </form>
                     <ul class="navbar-nav">
