--- a/templates/home/manage/notification.html
+++ b/templates/home/manage/notification.html
@@ -4,6 +4,7 @@
 {% block extra_head %}
 	<title>Notification</title>
     <link rel="stylesheet" type="text/css" href="{% static 'lib/css/emoji.css'%}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/home/manage/notification.css' %}">
 {% endblock %}
 
 
@@ -51,7 +52,7 @@
                 <br>
             </div>
 
-            <div class="col-md-7" id="notification-list-block">
+            <div class="col-md-7 content-bar" id="notification-list-block">
                 
             </div>
         </div>
