--- a/templates/generic/error404.html
+++ b/templates/generic/error404.html
@@ -1,13 +1,12 @@
 {% extends 'base.html' %}
-{% load static %}
 
 {% block extra_head %}
-	<title>Invalid Request</title>
+	<title>Error 404</title>
 {% endblock %}
 
 
 {% block extra_content %}
-    <h1 align="center">Invalid Request</h1>
+    <p class="display-4 text-center">Requested Page Not Found</p>
 {% endblock %}
 
 	
