--- a/templates/home/manage/index.html
+++ b/templates/home/manage/index.html
@@ -227,7 +227,7 @@
                             <div class="card-body">
                                 <p class="card-text float-left mr-2 lead">Posts: {{item.total_post}}</p>
                                 <p class="card-text lead">Rating: {{item.rating}}</p>
-                                <a href={this.getSpaceURL(item.space)} class="card-link btn btn-success">Visit</a>
+                                <a href="/space/{{item.space__name}}/" class="card-link btn btn-success">Visit</a>
                             </div>
                         </div>
                     </div>
