--- a/templates/home/manage/notification.html
+++ b/templates/home/manage/notification.html
@@ -48,11 +48,10 @@
                 {% else %}
                     <a href="/notification/?query=offer" class="list-group-item list-group-item-action">Offer</a>
                 {% endif %}
-
                 <br>
             </div>
           
-            <div class="col-md-7 content-bar" id="notification-list-block">
+            <div class="col-md-7" id="notification-list-block">
 
                 
             </div>
