--- a/templates/home/pages/cookie.html
+++ b/templates/home/pages/cookie.html
@@ -2,12 +2,12 @@
 {% load static %}
 
 {% block extra_head %}
-	<title>Terms - Sakkhat</title>
+	<title>Cookie - Sakkhat</title>
 {% endblock %}
 
 
 {% block extra_content %}
-	<h5 class="display-3 text-center">Will be updated</h5>
+	<h6 class="display-3 text-center">Will be updated</h6>
 {% endblock %}
 
 	
