--- a/staticfiles/css/account/manage/profile.css
+++ b/staticfiles/css/account/manage/profile.css
@@ -5,6 +5,6 @@
 
 }
 #user-avatar img {
-	width: 100%; height: auto;
-	border-radius: 10px;
+	width: 100%; height: 100%;
+	object-fit: cover; border-radius: 10px;
 }
