--- a/templates/account/manage/profile.html
+++ b/templates/account/manage/profile.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
-{% load my_filter %}
+{% load filter %}
 
 {% block extra_head %}
 	<title>{{ user.name }}</title>
-	<link rel="stylesheet" type="text/css" href="{% static 'css/account/manage/info.css'%}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/account/manage/profile.css'%}">
 {% endblock %}
 
 
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-md-3">
                 <div id="user-avatar">
-                        <img src="{{request.user.thumbnail}}" onerror="this.src='https://i.postimg.cc/0N8mRzvP/user.png'">
+                    <img src="{{request.user.thumbnail}}" onerror="this.src='https://i.postimg.cc/0N8mRzvP/user.png'">
                 </div>
                 <div class="list-group">
                     <a href="update/" class="list-group-item list-group-item-action">Update Info</a>
