--- a/templates/base.html
+++ b/templates/base.html
@@ -103,8 +103,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4 list-group">
-                   <div><a class="col" href="/about/">About</a></div>
-                   <div><a class="col" href="/feedback/">Give us feedback</a></div>
+                   <div><a class="col" href="/page/about/">About</a></div>
+                   <div><a class="col" href="/page/feedback/">Give us feedback</a></div>
                 </div>
                 <div class="col-md-4 list-group">
                     <div><a class="col" href="https://github.com/sakkhat/"><i class="fa fa-github"> Github</i></a></div>
@@ -112,8 +112,9 @@
                    <div><a class="col" href="https://facebook.com/sakkhat.inc/"><i class="fa fa-facebook-square"> Facebook</i></a></div>
                 </div>
                 <div class="col-md-4 list-group">
-                   <div><a class="col" href="/terms/">Terms</a></div>
-                   <div><a class="col" href="/privacy-policy/">Privacy Policy</a></div>
+                   <div><a class="col" href="/page/terms/">Terms of Service</a></div>
+                   <div><a class="col" href="/page/privacy-policy/">Privacy Policy</a></div>
+                   <div><a class="col" href="/page/cookie/">Cookie</a></div>
                 </div>
             </div>
         </div>
