--- a/templates/home/pages/privacy_policy.html
+++ b/templates/home/pages/privacy_policy.html
@@ -2,12 +2,12 @@
 {% load static %}
 
 {% block extra_head %}
-	<title>Privacy and Policy - Sakkhat</title>
+	<title>Privacy Policy - Sakkhat</title>
 {% endblock %}
 
 
 {% block extra_content %}
-	<h5 align="center">Will be updated</h5>
+	<h5 class="display-3 text-center">Will be updated</h5>
 {% endblock %}
 
 	
