--- a/templates/space/manage/update.html
+++ b/templates/space/manage/update.html
@@ -10,7 +10,7 @@
 
 {% block extra_content %}
     <div class="container-fluid">
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-md-7">
                 <div class="list-group-item">
                     <ul class="nav nav-tabs" role="tablist">
