--- a/templates/space/product/create.html
+++ b/templates/space/product/create.html
@@ -87,6 +87,6 @@
 
 
 {% block extra_script %}
-    <script type="text/javascript" src="{% static 'js/generic/image-preview.js'%}"></script>
+    <script type="text/javascript" src="{% static 'js/space/product/create.js'%}"></script>
 
 {% endblock %}
