--- a/staticfiles/css/space/product/single.css
+++ b/staticfiles/css/space/product/single.css
@@ -2,6 +2,11 @@
 	width: 50px; height: 50px;
 }
 
+#product-info-block {
+	min-height: 600px;
+	margin-bottom: 10px;
+}
+
 .product-avatar{
 	width: auto; height: auto;
 	max-width: 500px; 
