--- a/templates/generic/views/password_confirmation.html
+++ b/templates/generic/views/password_confirmation.html
@@ -1,16 +1,19 @@
 {% extends 'base.html' %}
-{% load static %}
 
 {% block extra_head %}
-	<title>Sign In</title>
-	<link rel="stylesheet" type="text/css" href="{% static 'css/account/auth/signin.css' %}">
+	<title>Password Confirmation</title>
+    <style type="text/css">
+        body {
+            background-color: #E2E9EA;
+        }
+    </style>
 {% endblock %}
 
 
 {% block extra_content %}
-        <div class="d-flex justify-content-center align-items-center" style="margin: 20px;">
-            <div class="col-lg-5 list-group-item">
-                <h6 align="center">Sign In</h6>
+    <div class="d-flex justify-content-center mt-3">
+        <div class="col-md-4">
+            <form class="list-group-item" method="POST">
                 {% if form.errors %}
                     {% for field in form %}
                         {% for error in field.errors %}
@@ -25,19 +28,17 @@
                         </div>
                     {% endfor %}
                 {% endif %}
-                
-                <form class="sign-in-form" method="POST">
-                    {% csrf_token %}
-                	{{ form.phone }}
-                	{{ form.password }}
-                    <input type="submit" value="Sign In" class="btn btn-success btn-block">
-                </form>
-                <a href="/account/password-reset/" class="list-group-item list-group-item-action">Forget Password?</a>
-            </div>  
+
+                {% csrf_token %}
+                {{ form.password.label }}
+                {{ form.password }}
+                <input type="submit" value="Confirm" class="btn btn-success btn-block mt-3">
+            </form>
         </div>
+    </div>
 {% endblock %}
 
+	
 
 {% block extra_script %}
-
 {% endblock %}
