--- a/templates/space/product/update.html
+++ b/templates/space/product/update.html
@@ -39,10 +39,10 @@
 		                    <img src="{{ item.location }}" id="img-view-{{forloop.counter}}">
 		                    <form method="POST" enctype="multipart/form-data" action="{{ item.uid }}/">
 		                    	{% csrf_token %}
-		                    	<label class="image-text-block" for="image{{forloop.counter}}">
+		                    	<label class="image-text-block" for="image{{forloop.counter}}" id="img-view">
 		                            <h6>Select Image</h6>
 		                        </label>
-		                        <input type="file" accept=".png, .jpeg, .jpg" name="image" id="image{{forloop.counter}}" class="d-none" onchange = 'openFile{{forloop.counter}}(event)'>
+		                        <input type="file" accept=".png, .jpeg, .jpg" name="image" id="image{{forloop.counter}}" class="d-none" onchange = 'openFile{{forloop.counter}}(event, "ima-view")'>
 		                        <button class="btn btn-primary btn-block" type="submit">Upload Selected Image</button>
 		                    </form>
 		                </div>
@@ -92,12 +92,7 @@
     		<br>
             <div class="list-group-item">
                 <a class="btn btn-primary" href="/space/product/{{product.uid}}/">Go to product view</a>
-                <button type="button" id="delete-button" class="btn btn-danger" data-toggle="dropdown">
-                    Delete  
-                </button>
-                <div class="dropdown-menu">
-                    <div class="dropdown-item btn-danger" href="#" onclick="deleteRequest()">Confirm</div>
-                </div>
+                <a href="/space/product/{{product.uid}}/update/delete/" class="btn btn-danger">Delete</a>
             </div>
     		<br><br>
     	</div>
@@ -109,17 +104,4 @@
 
 {% block extra_script %}
 	<script type="text/javascript" src="{% static 'js/generic/image-preview.js'%}"></script>
-    <script type="text/javascript">
-        var deleteRequest = function(event) {
-           $("#delete-button").html('Deleting all records <span class="spinner-border spinner-border-sm"></span>').toggleClass(' disabled');
-           $('#delete-spinner').removeClass('d-none');
-           fetch('/space/product/{{product.uid}}/update/delete/')
-           .then(response => response.json())
-           .then(data =>{
-                console.log(data.data);
-                window.location = "/space/{{product.space.name}}";
-           });
-        };
-    </script>
-
 {% endblock %}
