--- a/staticfiles/css/home/manage/notification.css
+++ b/staticfiles/css/home/manage/notification.css
@@ -1,3 +1,22 @@
 body {
 	background-color: #E2E9EA;
 }
+.left-block {
+	width: 240px; max-height: 100%; 
+	position: fixed; overflow: auto;
+	margin: 10px 0px 0px 10px; 
+}
+
+.right-block {
+	margin-left: 250px;
+}
+
+@media screen and (max-width: 768px){
+	.left-block {
+		width: 90%; margin: auto; height: auto;
+		position: relative;
+	}
+	.right-block {
+		margin: 0px;
+	}
+}
