--- a/templates/space/manage/update.html
+++ b/templates/space/manage/update.html
@@ -2,61 +2,65 @@
 {% load static %}
 
 {% block extra_head %}
-	<title>Update | {{ space.name }}</title>
+	<title>Update {{tab | capfirst }} | {{ space.name }}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/space/manage/index.css'%}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/space/manage/update.css'%}">
 {% endblock %}
 
 
 {% block extra_content %}
-    <div class="d-flex justify-content-center">
-        <div class="col-md-7">
-
-            <div id="banner-slider" class="carousel slide mb-4" data-ride="carousel" data-interval="false">
-                <ul class="carousel-indicators">
-                    <li data-target="#banner-slider" data-slide-to="0"></li>
-                    <li data-target="#banner-slider" data-slide-to="1"></li>
-                    <li data-target="#banner-slider" data-slide-to="2"></li>
-                </ul>
-
-                <div class="carousel-inner">
+    <div class="container-fluid mt-3">
+        <div class="row justify-content-center">
+            <div class="col-md-3 mb-3">
+                <div>
+                    <h4 class="list-group-item bg-secondary text-white">Update</h4>
+                    {% if tab == 'information' %}
+                        <a href="/space/{{space.name}}/update/?tab=information" class="list-group-item active">Information</a>
+                        <a href="/space/{{space.name}}/update/?tab=banner" class="list-group-item">Banner</a>
+                    {% else %}
+                        <a href="/space/{{space.name}}/update/?tab=information" class="list-group-item">Information</a>
+                        <a href="/space/{{space.name}}/update/?tab=banner" class="list-group-item active">Banner</a>
+                    {% endif %}
+                </div>
+            </div>
+            <div class="col-md-7">
+                {% if tab == 'banner' %}
                     {% for banner in banners %}
-                        {% if forloop.first %}
-                        <div class="carousel-item active">
-                        {% else %}
-                        <div class="carousel-item">
-                        {% endif %}
-                        
-                            <div class="banner-slider-item">
-                                <img src="{{banner.location}}" onerror="{this.src='https://images.unsplash.com/photo-1469827160215-9d29e96e72f4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80'}" height="350px">
-                            </div>
+                        <div class="list-group-item banner-container">
+                            <img src="{{banner.location}}" id="banner-{{forloop.counter}}">
+                            <form id="form-{{forloop.counter}}">
+                                {% csrf_token %}
+                                <label for="banner-{{forloop.counter}}-input" class="btn btn-outline-secondary pickers">Choose</label>
+                                <input type="text" name="what" value="banner" class="d-none">
+                                <input type="text" name="current" value="{{banner.uid}}" class="d-none">
+                                <input type="text" name="space" value="{{space.name}}" class="d-none">
+                                <input type="text" name="token" value="{{token}}" class="d-none">
+                                <input type="file" id="banner-{{forloop.counter}}-input" name="image" class="d-none" onchange="previewImage(event, '#banner-{{forloop.counter}}', '#banner-{{forloop.counter}}-uploader')" accept=".png, .jpg, .jpeg">
+                                <button type="button" class="btn btn-success uploader" onclick="upload(this.id, 'form-{{forloop.counter}}')" id="banner-{{forloop.counter}}-uploader">Save</button>
+                            </form>
                         </div>
                     {% endfor %}
-                </div>
-
-                <a class="carousel-control-prev" href="#banner-slider" data-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
-                </a>
-                <a class="carousel-control-next" href="#banner-slider" data-slide="next">
-                    <span class="carousel-control-next-icon"></span>
-                </a>
+                {% else %}
+                    <form method="POST">
+                        {% csrf_token %}
+                        <div class="list-group-item">
+                            {{ form}}
+                        </div>
+                        <button type="submit" class="btn btn-success btn-block">Update</button>
+                    </form>
+                {% endif %}
+                <br>
+                <a href="/space/{{space.name}}/" class="list-group-item list-group-item-action">Back to Space</a>
+                <br>
             </div>
-
-
-            <form method="POST">
-                {% csrf_token %}
-                <div class="list-group-item">
-                    {{ form}}
-                </div>
-                <button type="submit" class="btn btn-primary btn-block">Update</button>
-            </form>
-            <br>
-            <a href="/space/{{space.name}}/" class="list-group-item list-group-item-action">Back to Space</a>
-            <br><br>
         </div>
     </div>
 {% endblock %}
 
 
 {% block extra_script %}
-
+    {% if tab == 'banner' %}
+        <script type="text/javascript" src="{% static 'js/generic/image-handler.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/space/manage/update.js' %}"></script>
+    {% endif %}
 {% endblock %}
