--- a/templates/space/manage/index.html
+++ b/templates/space/manage/index.html
@@ -32,7 +32,7 @@
                             {% endif %}
                             
                                 <div class="banner-slider-item">
-                                    <img src="{{banner.location}}" onerror="{this.src='https://images.unsplash.com/photo-1469827160215-9d29e96e72f4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80'}" height="350px">
+                                    <img src="{{banner.location}}" height="350px">
                                 </div>
                             </div>
                         {% endfor %}
