--- a/staticfiles/css/space/manage/update.css
+++ b/staticfiles/css/space/manage/update.css
@@ -9,6 +9,7 @@
 }
 .pickers {
 	position: absolute; cursor: pointer;
+	background-color: rgba(255,255,255,0.8);
 	left: 50%; top: 50%; transform: translate(-50%, -50%);
 }
 
