--- a/templates/account/password/change.html
+++ b/templates/account/password/change.html
@@ -12,6 +12,20 @@
     <div class="d-flex justify-content-center align-items-center">
         <div class="col-md-4 list-group-item" style="margin: 20px;">
             <h6 align="center">Change Password</h6>
+            {% if form.errors %}
+                {% for field in form %}
+                    {% for error in field.errors %}
+                        <div class="alert alert-danger">
+                            <strong>{{ error|escape }}</strong>
+                        </div>
+                    {% endfor %}
+                {% endfor %}
+                {% for error in form.non_field_errors %}
+                    <div class="alert alert-danger">
+                        <strong>{{ error|escape }}</strong>
+                    </div>
+                {% endfor %}
+            {% endif %}
             <form class="sign-in-form" method="POST">
                 {% csrf_token %}
                 {{ form.current_password }}
